--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "emailjs-com": "^3.2.0",
     "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "skill-icons": "^0.0.0",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
